--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,14 @@
 {
+    "name": "mwf/wp-theme-boilerplate",
+    "description": "WP Plugin/Theme Library",
+    "type": "library",
+    "license": "GPL-2.0+ <http://www.gnu.org/licenses/gpl-2.0.txt>",
+    "authors": [
+        {
+            "name": "Bob Moore",
+            "email": "bob.moore@midwestfamilymadison.com"
+        }
+    ],
 	"minimum-stability": "dev",
 	"prefer-stable": true,
 	"config": {
