--- a/composer.json
+++ b/composer.json
@@ -74,7 +74,7 @@
 			],
 			"composerjson": "composer-deps.json",
 			"composerlock": "composer-deps.lock",
-			"autorun": true
+			"autorun": false
 		}
 	}
 }
